@@ -11,3 +11,8 @@ plugins {
 }
 
 group = 'io.seqera'
+
+tasks.withType(Test) {
+    // note: "--enable-preview" is required to use virtual thread on Java 19 and 20
+    jvmArgs (["--enable-preview"])
+}
